# impac-t

./: .gitignore  Breakout.sln  CMakeLists.txt  Impact.sln  README.md  index.html  params.json  prepare.bat  prepare.sh
Box2D/Box2D/: Box2D.vcxproj  Box2D.vcxproj.filters  README.txt
Box2D/Box2D/Common/: b2Settings.h
Box2D/Box2D/Debug/: vc120.idb
Box2D/Box2D/Debug/Box2D.tlog/: Box2D.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
Box2D/Box2D/Release/Box2D.tlog/: Box2D.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  lib.command.1.tlog
Box2D/Debug/: Box2D.idb  Box2D.lib
Box2D/Release/: Box2D.lib
Breakout/: Body.cpp  Body.h  BodyBall.cpp  BodyBall.h  BodyBlock.cpp  BodyBlock.h  BodyGround.cpp  BodyGround.h  BodyPad.cpp  BodyPad.h  BodyRacket.cpp  BodyRacket.h  BodyText.cpp  BodyText.h  Breakout.cpp  Breakout.h  Breakout.vcxproj  Breakout.vcxproj.filters  Destructible.h  Destructive.h  Easings.h  ExplosionParticleSystem.cpp  ExplosionParticleSystem.h  Level.cpp  Level.h  ParticleSystem.cpp  ParticleSystem.h  TextureCache.cpp  TextureCache.h  globals.cpp  globals.h  main.cpp  main.h  stdafx.cpp  stdafx.h  util.cpp  util.h
Breakout/resources/levels/: 0001.tmx  0002.tmx  0003.tmx  0005.tmx
Breakout/resources/shaders/: particlesystem.frag  title.frag
Breakout/resources/soundfx/: 2gg.cmd  penalty.sfs
Debug/: Box2D.lib
Impact/: Ball.cpp  Ball.h  Block.cpp  Block.h  Body.cpp  Body.h  BodyBall.cpp  BodyBall.h  BodyBallTrace.cpp  BodyBallTrace.h  BodyBlock.cpp  BodyBlock.h  BodyGround.cpp  BodyGround.h  BodyRacket.cpp  BodyRacket.h  BodyText.cpp  BodyText.h  BodyWall.cpp  BodyWall.h  Bumper.cpp  Bumper.h  CMakeLists.txt  Destructible.h  Destructive.h  Easings.h  Explosion.cpp  Explosion.h  Ground.cpp  Ground.h  Impact.cpp  Impact.h  Impact.rc  Impact.vcxproj  Impact.vcxproj.filters  LICENSE.md  Level.cpp  Level.h  LevelTimer.h  LocalSettings.cpp  (+35 more)
Impact/resources/levels/: 0001.tmx  0002.tmx  0003.tmx  0004.tmx  0005.tmx  0006.tmx  0007.tmx  0008.tmx  0009.tmx  0010.tmx  0011.tmx
Impact/resources/music/: 2ogg.bat
Impact/resources/shaders/: aberration.frag  aberration.fs  approachingoverlay.fs  earthquake.frag  earthquake.fs  explosion.fs  fade.fs  fallingblock.frag  fallingblock.fs  hblur.frag  hblur.fs  keyhole.fs  mix.frag  mix.fs  motionblur.fs  motionblur.vs  outline.fs  overlay.fs  particlesystem.frag  postfx.frag  rgbseparation.frag  softparticlesystem.frag  softparticlesystem.fs  title.frag  title.fs  toon.fs  vblur.frag  vblur.fs  vignette.fs
Impact/resources/soundfx/: 2gg.cmd  2mp3.cmd  2wav.cmd  highscore.sfs  killing-spree.sfs  level-complete.sfs  multiball.sfs  new-life.sfs  startup.sfs
Impact/testlevels/demo/: demo.tmx
Release/: Box2D.lib
_raw/: App-Icon.psd  Ball.psd  BigBlock.psd  Blocks.psd  Bumper.psd  CirclePad.psd  Ground.psd  Hand-Cursor.psd  Icon.psd  Pad.psd  Title.psd  Walls.psd
_tools/milkytracker-0.90.86-winnt/: milkytracker.cfg
_tools/milkytracker-0.90.86-winnt/songs/: Bassdrum.xi  Pulse01.xi  Snaredrum.xi  Synth01.xi  handdrawn.xm  tutorial01.xm  tutorial02.xm  tutorial03.xm
deploy/: Bangout.nsi  Impact.nsi
ffmpeg/: README.txt  licenses.7z
ffmpeg/include/libavutil/: common.h  ffversion.h  pixdesc.h
ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
glew/: ReadMe.txt  glew.vcxproj  glew.vcxproj.filters
glfw/: ReadMe.txt  glfw.vcxproj  glfw.vcxproj.filters
minizip/: MiniZip64_info.txt  miniunz.c  miniunz.h
stylesheets/: stylesheet.css
